[package]
name = "test-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { path = ".." }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = ".." }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
which = "4.2.2"
